--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -14,26 +14,32 @@ ruleset=🎯 直连,[]GEOIP,CN,no-resolve
 ;🍎 苹果服务
 ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ;======================================================================================================================
-;🧱 GFW列表。
-ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-;🎬 国外媒体
-ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+;🧱 GFW
+ruleset=🧱 GFW,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+;🎬 外媒
+ruleset=🎬 外媒,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ;✈️ 电报
-ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=✈️ 电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ;🕊️ 推特
-;ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
-;Ⓜ️ 微软服务
-ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-;📢 谷歌FCM。
-ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=🕊️ 推特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
+;Ⓜ️ 微软
+ruleset=Ⓜ️ 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+;📢 谷歌FCM
+ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ;♾️ 规则之外
-ruleset=🚀 代理,[]FINAL
+ruleset=♾️ 规则之外,[]FINAL
 ;======================================================================================================================
 ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀 代理`select`[]DIRECT
+custom_proxy_group=🧱 GFW`select`[]DIRECT
+custom_proxy_group=🎬 外媒`select`[]DIRECT
+custom_proxy_group=✈️ 电报`select`[]DIRECT
+custom_proxy_group=🕊️ 推特`select`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软`select`[]DIRECT
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT
+custom_proxy_group=♾️ 规则之外`select`[]DIRECT
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
 ;======================================================================================================================
