--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -22,10 +22,11 @@ ruleset=✈️ 电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/C
 ruleset=🕊️ 推特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
 ;Ⓜ️ 微软
 ruleset=Ⓜ️ 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+;======================================================================================================================
 ;📢 谷歌FCM
-ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ;🧱 GFW
-ruleset=🧱 GFW,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ;======================================================================================================================
 ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
@@ -34,12 +35,11 @@ ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=♾️ 规则之外,[]FINAL
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🧱 GFW`select`[]DIRECT
+custom_proxy_group=🚀 代理`select`[]DIRECT
 custom_proxy_group=🎬 外媒`select`[]DIRECT
 custom_proxy_group=✈️ 电报`select`[]DIRECT
 custom_proxy_group=🕊️ 推特`select`[]DIRECT
 custom_proxy_group=Ⓜ️ 微软`select`[]DIRECT
-custom_proxy_group=📢 谷歌FCM`select`[]DIRECT
 custom_proxy_group=♾️ 规则之外`select`[]DIRECT
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
