--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -40,7 +40,8 @@ custom_proxy_group=✈️ 电报`load-balance`(韩国|KR|🇰🇷)`http://www.gs
 custom_proxy_group=🕊️ 推特`load-balance`(日本|JP|🇯🇵)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🎬 外媒`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=Ⓜ️ 微软`load-balance`(新加坡|SG|🇸🇬)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=♾️ 规则之外`load-balance`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=♾️ 规则之外`select`[]🚀 代理`[]DIRECT
+;custom_proxy_group=♾️ 规则之外`load-balance`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
 ;======================================================================================================================
