--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -35,11 +35,11 @@ ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=♾️ 规则之外,[]FINAL
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀 代理`select`[]DIRECT
-custom_proxy_group=✈️ 电报`select`[]DIRECT
-custom_proxy_group=🕊️ 推特`select`[]DIRECT
-custom_proxy_group=🎬 外媒`select`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软`select`[]DIRECT
+custom_proxy_group=🚀 代理`load-balance`(香港|HK|🇭🇰)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=✈️ 电报`load-balance`*.`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🕊️ 推特推特`load-balance`(日本|JP|🇯🇵)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🎬 外媒`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=Ⓜ️ 微软`load-balance`(新加坡|SG|🇸🇬)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=♾️ 规则之外`select`[]🚀 代理`[]DIRECT
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
