--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -35,7 +35,7 @@ ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=♾️ 规则之外,[]FINAL
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀 代理`load-balance`(香港|HK|🇭🇰)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🚀 代理`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=✈️ 电报`load-balance`.*`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🕊️ 推特`load-balance`(日本|JP|🇯🇵)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🎬 外媒`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
