--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -21,10 +21,10 @@ ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=✈️ 电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ;🕊️ 推特
 ruleset=🕊️ 推特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
-;🎬 外媒
-ruleset=🎬 外媒,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ;Ⓜ️ 微软
 ruleset=Ⓜ️ 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+;🎬 外媒
+ruleset=🎬 外媒,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ;======================================================================================================================
 ;📢 谷歌FCM
 ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
@@ -38,8 +38,8 @@ ruleset=♾️ 规则之外,[]FINAL
 custom_proxy_group=🚀 代理`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=✈️ 电报`load-balance`.*`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🕊️ 推特`load-balance`(日本|JP|🇯🇵)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🎬 外媒`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=Ⓜ️ 微软`load-balance`(新加坡|SG|🇸🇬)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🎬 外媒`select`[]🚀 代理`[]DIRECT
 custom_proxy_group=♾️ 规则之外`select`[]🚀 代理`[]DIRECT
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
