--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -1,5 +1,5 @@
 [custom]
-;acl4SSR规则-在线版，修改以避免DNS泄露。
+;acl4SSR规则-定制版。
 ;======================================================================================================================
 ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
