--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -14,9 +14,11 @@ ruleset=✈️ 电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/C
 ruleset=🕊️ 推特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
 ruleset=🎬 外媒,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-;ruleset=🎯 直连,[]GEOIP,LAN,no-resolve
+ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+ruleset=🎯 直连,[]GEOIP,LAN,no-resolve
 ruleset=🎯 直连,[]GEOIP,CN,no-resolve
 ruleset=♾️ 规则之外,[]FINAL
 ;======================================================================================================================
