--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -20,7 +20,7 @@ ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🎯 直连,[]GEOIP,LAN,no-resolve
 ruleset=🎯 直连,[]GEOIP,CN,no-resolve
-ruleset=♾️ 规则之外,[]FINAL
+ruleset=♾️ 规外,[]FINAL
 ;======================================================================================================================
 ;控制组
 custom_proxy_group=🚀 代理`select`[]DIRECT
@@ -28,7 +28,7 @@ custom_proxy_group=✈️ 电报`select`[]DIRECT
 custom_proxy_group=🕊️ 推特`select`[]DIRECT
 custom_proxy_group=Ⓜ️ 微软`select`[]DIRECT
 custom_proxy_group=🎬 外媒`select`[]DIRECT
-custom_proxy_group=♾️ 规则之外`select`[]🚀 代理`[]DIRECT
+custom_proxy_group=♾️ 规外`select`[]DIRECT
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
 ;======================================================================================================================
