--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -28,7 +28,7 @@ custom_proxy_group=✈️ 电报`select`[]DIRECT
 custom_proxy_group=🕊️ 推特`select`[]DIRECT
 custom_proxy_group=Ⓜ️ 微软`select`[]DIRECT
 custom_proxy_group=🎬 外媒`select`[]DIRECT
-custom_proxy_group=♾️ 规外`select`[]DIRECT`[]🚀 代理
+custom_proxy_group=♾️ 规外`select`[]🚀 代理`[]DIRECT
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
 ;======================================================================================================================
