--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -24,7 +24,7 @@ ruleset=♾️ 规外,[]FINAL
 ;======================================================================================================================
 ;控制组
 custom_proxy_group=🚀 代理`select`[]DIRECT
-custom_proxy_group=✈️ 电报`select`[]DIRECT
+custom_proxy_group=✈️ 电报`select`[]🚀 代理`[]DIRECT
 custom_proxy_group=🕊️ 推特`select`[]🚀 代理`[]DIRECT
 custom_proxy_group=Ⓜ️ 微软`select`[]🚀 代理`[]DIRECT
 custom_proxy_group=🎬 外媒`select`[]🚀 代理`[]DIRECT
