--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -26,8 +26,8 @@ ruleset=♾️ 规外,[]FINAL
 custom_proxy_group=🚀 代理`select`[]DIRECT
 custom_proxy_group=✈️ 电报`select`[]DIRECT
 custom_proxy_group=🎬 外媒`select`[]DIRECT
-custom_proxy_group=🕊️ 推特`select`[]DIRECT
 custom_proxy_group=Ⓜ️ 微软`select`[]DIRECT
+custom_proxy_group=🕊️ 推特`select`[]🚀 代理`[]DIRECT
 custom_proxy_group=♾️ 规外`select`[]🚀 代理`[]DIRECT
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
