--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -11,7 +11,7 @@ ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=Ⓜ️ 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=✈️ 电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=🤖 OpenAI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
+ruleset=🙆🏻‍♀️ OpenAI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🕊️ 推特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
 ruleset=🎬 外媒,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
@@ -25,11 +25,11 @@ ruleset=♾️ 规外,[]FINAL
 ;======================================================================================================================
 ;控制组
 custom_proxy_group=🚀 代理`load-balance`(香港|HK|🇭🇰)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=✈️ 电报`load-balance`.*`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🤖 OpenAI`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🎬 外媒`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=Ⓜ️ 微软`load-balance`(新加坡|SG|🇸🇬)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=✈️ 电报`load-balance`.*`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🙆🏻‍♀️ OpenAI`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🕊️ 推特`load-balance`(香港|HK|🇭🇰)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🎬 外媒`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=♾️ 规外`select`[]🚀 代理`[]DIRECT
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
