--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -2,6 +2,8 @@
 ;acl4SSR规则-定制版。
 ;======================================================================================================================
 ruleset=🎯 直连,https://raw.githubusercontent.com/carl2018xy/Sub_C_Rules/main/Rules_Direct
+ruleset=🚀 代理,https://raw.githubusercontent.com/carl2018xy/Sub_C_Rules/main/Rules_Proxy
+;======================================================================================================================
 ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
