--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -34,7 +34,7 @@ ruleset=🎯 直连,[]GEOIP,CN,no-resolve
 ruleset=♾️ 规外,[]FINAL
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀 代理`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🚀 代理`select`[]DIRECT
 custom_proxy_group=♾️ 规外`select`[]🚀 代理`[]DIRECT
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
