--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -10,11 +10,12 @@ ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Goog
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 
+;✈️ 电报
+ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+
 ;👰 特定路由
 ;Ⓜ️ 微软
 ruleset=👰,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-;✈️ 电报
-ruleset=👰,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ;🙆🏻‍♀️ OpenAI
 ruleset=👰,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ;🕊️ 推特
