--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -31,7 +31,7 @@ ruleset=🎯,[]GEOIP,CN,no-resolve
 ruleset=♾️,[]FINAL
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀`select`[]DIRECT
+custom_proxy_group=🚀`load-balance`(台湾|TW|🇹🇼|新加坡|SG|🇸🇬)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=♾️`select`[]🚀`[]DIRECT
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
