--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -28,11 +28,10 @@ ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Chin
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🎯,[]GEOIP,LAN,no-resolve
 ruleset=🎯,[]GEOIP,CN,no-resolve
-ruleset=♾️,[]FINAL
+ruleset=🚀,[]FINAL
 ;======================================================================================================================
 ;控制组
 custom_proxy_group=🚀`select`[]DIRECT
-custom_proxy_group=♾️`select`[]🚀`[]DIRECT
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
 ;======================================================================================================================
