--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -24,7 +24,7 @@ ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Down
 ruleset=🎯,[]GEOIP,LAN,no-resolve
 ruleset=🎯,[]GEOIP,CN,no-resolve
 
-ruleset=🚀,[]FINAL
+ruleset=🎯,[]FINAL
 ;======================================================================================================================
 ;控制组
 custom_proxy_group=🚀`select`[]DIRECT
