--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -25,7 +25,7 @@ ruleset=🚀,[]FINAL
 ;控制组
 custom_proxy_group=🚀`select`[]DIRECT
 custom_proxy_group=✈️`select`[]DIRECT
-custom_proxy_group=Ⓜ️`select`[]DIRECT
+custom_proxy_group=Ⓜ️`select`.*
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
 ;======================================================================================================================
