--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -23,8 +23,10 @@ ruleset=🎯,[]GEOIP,CN,no-resolve
 ruleset=🚀,[]FINAL
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀`select`[]DIRECT
-custom_proxy_group=✈️`select`[]DIRECT
+custom_proxy_group=🇺🇸`load-balance`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇳`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🚀`select`[]🇺🇸`[]🇺🇳`[]DIRECT
+custom_proxy_group=✈️`select`[]🇺🇸`[]DIRECT
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
 ;======================================================================================================================
