--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -9,7 +9,7 @@ ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Rule
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-ruleset=✈️,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
 ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
@@ -24,11 +24,10 @@ ruleset=🚀,[]FINAL
 ;======================================================================================================================
 ;控制组
 custom_proxy_group=🚀`select`[]🇺🇸`[]🇺🇳`[]DIRECT
-custom_proxy_group=✈️`select`[]🇺🇳`[]DIRECT
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
 custom_proxy_group=🇺🇸`load-balance`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇳`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇳`select`.*
 ;======================================================================================================================
 enable_rule_generator=true
 overwrite_original_rules=true
