--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -24,10 +24,9 @@ ruleset=🎯,[]GEOIP,CN,no-resolve
 ruleset=🚀,[]FINAL
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀`select`[]🇺🇸`[]🇺🇳`[]DIRECT
+custom_proxy_group=🚀`select`[]🇺🇳`[]DIRECT
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
-custom_proxy_group=🇺🇸`load-balance`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇳`select`.*
 ;======================================================================================================================
 enable_rule_generator=true
