--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -24,9 +24,10 @@ ruleset=🎯,[]GEOIP,CN,no-resolve
 ruleset=🚀,[]FINAL
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀`select`.*
+custom_proxy_group=🚀`select`[]🏳️‍⚧️`.*
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
+custom_proxy_group=🏳️‍⚧️`load-balance`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`600,,
 ;======================================================================================================================
 enable_rule_generator=true
 overwrite_original_rules=true
