--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -25,11 +25,11 @@ ruleset=🎯,[]GEOIP,CN,no-resolve
 ruleset=🚀,[]FINAL
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀`select`[]🇺🇸 哈希`[]🌎
+custom_proxy_group=🚀`select`[]🇺🇸 Hash`[]🌎
 custom_proxy_group=🌎`select`.*
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
-custom_proxy_group=🇺🇸 哈希`load-balance`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`600,,
+custom_proxy_group=🇺🇸 Hash`load-balance`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`600,,
 ;======================================================================================================================
 enable_rule_generator=true
 overwrite_original_rules=true
