--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -25,8 +25,8 @@ ruleset=🎯,[]GEOIP,CN,no-resolve
 ruleset=🚀,[]FINAL
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀`select`[]♻️`[]✈️
-custom_proxy_group=✈️`select`.*
+custom_proxy_group=🚀`select`[]♻️
+custom_proxy_group=✈️`url-test`(^(?=.*(美国|US|🇺🇸))(?!.*EMO).*)`http://www.gstatic.com/generate_204`600,,
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
 custom_proxy_group=♻️`url-test`.*`http://www.gstatic.com/generate_204`600,,
