--- a/Cus_Rules_U_T.ini
+++ b/Cus_Rules_U_T.ini
@@ -26,7 +26,7 @@ ruleset=🗽,[]FINAL
 ;======================================================================================================================
 ;控制组
 custom_proxy_group=🗽`url-test`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`600,2,100
-custom_proxy_group=🕊️`select`(?=.*美国)(?=.*家宽).+
+custom_proxy_group=🕊️`url-test`(?=.*美国)(?=.*家宽).+`http://www.gstatic.com/generate_204`600,2,100
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
 ;======================================================================================================================
