--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -25,8 +25,10 @@ ruleset=🎯,[]GEOIP,CN,no-resolve
 ruleset=🚀,[]FINAL
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀`select`[]🗽`.*
+custom_proxy_group=🚀`select`[]🗽`[]🧋`[]🌸`.*
 custom_proxy_group=🗽`url-test`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`600,2,100
+custom_proxy_group=🧋`url-test`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`600,2,100
+custom_proxy_group=🌸`url-test`(日本|JP|🇯🇵)`http://www.gstatic.com/generate_204`600,2,100
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
 ;======================================================================================================================
