--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -1,6 +1,7 @@
 [custom]
 ;======================================================================================================================
 ;规则组
+ruleset=🍃,https://raw.githubusercontent.com/carl2018xy/Sub_C_Rules/main/Reject.list
 ruleset=🎯,https://raw.githubusercontent.com/carl2018xy/Sub_C_Rules/main/Driect.list
 ruleset=🚀,https://raw.githubusercontent.com/carl2018xy/Sub_C_Rules/main/Specific.list
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
