--- a/Cus_Rules_M.ini
+++ b/Cus_Rules_M.ini
@@ -2,6 +2,7 @@
 ;======================================================================================================================
 ruleset=🍃,https://raw.githubusercontent.com/carl2018xy/Sub_C_Rules/main/Reject.list
 ruleset=🎯,https://raw.githubusercontent.com/carl2018xy/Sub_C_Rules/main/Driect.list
+;======================================================================================================================
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🍃,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
@@ -16,7 +17,7 @@ ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Prox
 ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=🎯,[]GEOIP,CN,no-resolve
+ruleset=🎯,[]GEOIP,CN
 ruleset=🚀,[]FINAL
 ;======================================================================================================================
 custom_proxy_group=🚀`select`.*
