--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -21,9 +21,9 @@ ruleset=🎯,[]GEOIP,CN,no-resolve
 ruleset=🚀,[]FINAL
 ;======================================================================================================================
 custom_proxy_group=🚀`select`[]🇺🇸`[]🇹🇼`[]🇨🇦`[]🔧
-custom_proxy_group=🇺🇸`load-balance`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=🇹🇼`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=🇨🇦`load-balance`(加拿大|CA|🇨🇦)`http://www.gstatic.com/generate_204`600,,100
+custom_proxy_group=🇺🇸`load-balance`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`600,3,100
+custom_proxy_group=🇹🇼`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`600,3,100
+custom_proxy_group=🇨🇦`load-balance`(加拿大|CA|🇨🇦)`http://www.gstatic.com/generate_204`600,3,100
 custom_proxy_group=🔧`select`.*
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
