--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -8,21 +8,27 @@ ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Loca
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🍃,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=🌸,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=🌸,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-ruleset=🌸,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=🌸,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🌸,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯,[]GEOIP,CN,no-resolve
-ruleset=🌸,[]FINAL
+ruleset=🚀,[]FINAL
 ;======================================================================================================================
-custom_proxy_group=🌸`load-balance`(日本|JP|🇯🇵)`http://www.gstatic.com/generate_204`600,3,100
-custom_proxy_group=🖕🏻`select`(日本|JP|🇯🇵)
+custom_proxy_group=🚀`select`[]🧋`[]🇺🇸`[]🇯🇵`[]🇸🇬`[]🇭🇰`[]🇰🇷`[]🌎
+custom_proxy_group=🧋`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`600,3,100
+custom_proxy_group=🇺🇸`load-balance`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`600,3,100
+custom_proxy_group=🇯🇵`load-balance`(日本|JP|🇯🇵)`http://www.gstatic.com/generate_204`600,3,100
+custom_proxy_group=🇸🇬`load-balance`(新加坡|SG|🇸🇬)`http://www.gstatic.com/generate_204`600,3,100
+custom_proxy_group=🇭🇰`load-balance`(香港|HK|🇭🇰)`http://www.gstatic.com/generate_204`600,3,100
+custom_proxy_group=🇰🇷`load-balance`(韩国|KR|🇰🇷)`http://www.gstatic.com/generate_204`600,3,100
+custom_proxy_group=🌎`select`.*
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
 ;======================================================================================================================
